graphics(egl): multi-window — destroyContext keeps the shared display alive; createContext shares with primary/threaded context (ISS-538)
Two multi-window EGL bugs (SGE-original ANGLE path, both GlOpsJvm + GlOpsNative):
(1) destroyContext called eglTerminate(display) per-window — but the ANGLE display
is shared across all windows, so closing one window killed every other window's
context. Now ref-count contexts per display; eglTerminate only when the last
context on a display is destroyed. (2) createContext passed EGL_NO_CONTEXT and had
no sharedContext param, so GL resources weren't shared across windows and the
sharedContext DesktopApplication threaded was dropped. Now createContext shares new
contexts with an explicit threaded sharedContextHandle (new defaulted param, plumbed
from DesktopApplication.setupWindow) or the display's primary (first) context;
the first context becomes the primary. Matches LibGDX desktop (all windows share).

red:734fb8e8 (DesktopIntegrationTest 2-window/2-context subprocess: close window 1
-> window 2 survives; texture from ctx1 visible in ctx2) fix:e86ba6e2 audit:PASS
(proof-of-red both clauses, test executes 0-ignored, 2 mutations, JVM/Native compile).